--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,14 @@
+glob2==0.6
 numpy==1.14.0
+pandas==0.22.0
 Pillow==5.0.0
+python-dateutil==2.6.1
+pytz==2018.3
 PyYAML==3.12
+scikit-learn==0.19.1
+scipy==1.0.0
 six==1.11.0
+sklearn==0.0
 torch==0.3.0.post4
 torchvision==0.2.0
 tqdm==4.19.5
